--- a/app/src/main/res/layout/activity_mobil.xml
+++ b/app/src/main/res/layout/activity_mobil.xml
@@ -6,4 +6,37 @@
     android:layout_height="match_parent"
     tools:context=".MobilActivity">
 
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:id="@+id/linear_layout1"
+                android:background="#24549c">
+                <ImageButton
+                    android:id="@+id/btnBackFromMobil"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:backgroundTint="#24549c"
+                    android:src="@drawable/ic_baseline_arrow_back_white"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="30dp"
+                    android:textColor="@color/white"
+                    android:layout_marginTop="8dp"
+                    style="@style/TextAppearance.AppCompat.SearchResult.Title"
+                    android:text="Pilihan Mobil Tersedia"/>
+            </LinearLayout>
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/rv_mobil"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/linear_layout1"
+                tools:listitem="@layout/item_mobil" />
+        </RelativeLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
