--- a/app/src/main/res/layout/detail_riwayat_transaksi_customer.xml
+++ b/app/src/main/res/layout/detail_riwayat_transaksi_customer.xml
@@ -64,6 +64,15 @@
                 android:text="Nama Mobil"
                 android:gravity="center_horizontal"/>
             <TextView
+                android:id="@+id/tv_no_plat_mobil"
+                style="@style/TextAppearance.AppCompat.Body2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:ellipsize="end"
+                android:maxLines="1"
+                android:text="AD1234WB"
+                android:gravity="center_horizontal"/>
+            <TextView
                 android:id="@+id/tv_tarif_mobil_harian"
                 style="@style/TextAppearance.AppCompat.Body1"
                 android:layout_width="match_parent"
@@ -71,7 +80,10 @@
                 android:text="Rp XX.XXX,00"
                 android:gravity="center_horizontal"/>
 
-
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="2dp"
+            android:background="#c0c0c0"/>
             <ImageView
                 android:id="@+id/iv_foto_driver_detail"
                 style="@style/TextAppearance.AppCompat.Body2"
@@ -87,6 +99,15 @@
                 android:maxLines="1"
                 android:text="Nama Driver"
                 android:gravity="center_horizontal"/>
+        <TextView
+            android:id="@+id/tv_no_driver"
+            style="@style/TextAppearance.AppCompat.Body2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:ellipsize="end"
+            android:maxLines="1"
+            android:text="DRV-22XXXXXX"
+            android:gravity="center_horizontal"/>
          <TextView
             android:id="@+id/tv_tarif_driver_harian"
             style="@style/TextAppearance.AppCompat.Body1"
@@ -450,6 +471,24 @@
                 android:layout_height="wrap_content"
                 android:isIndicator="true"/>
         </LinearLayout>
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="2dp"
+            android:background="#c0c0c0"/>
+        <TextView
+            android:id="@+id/txt_bukti_pembayaran"
+            style="@style/TextAppearance.AppCompat.Body2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:ellipsize="end"
+            android:maxLines="1"
+            android:text="Bukti Pembayaran"
+            android:gravity="center_horizontal" />
+        <ImageView
+            android:id="@+id/iv_bukti_pembayaran"
+            style="@style/TextAppearance.AppCompat.Body2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
         <com.google.android.material.button.MaterialButton
             android:layout_marginTop="25dp"
             android:layout_marginStart="50dp"
