--- a/app/src/main/res/layout/activity_profile_driver.xml
+++ b/app/src/main/res/layout/activity_profile_driver.xml
@@ -49,11 +49,13 @@
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="20dp"
                     android:layout_marginRight="20dp"
+                    android:layout_marginTop="20dp"
                     android:orientation="vertical">
                     <ImageView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_horizontal"
+                        android:layout_marginBottom="10dp"
                         android:id="@+id/iv_foto_profil_driver"/>
 
                     <LinearLayout
@@ -227,29 +229,29 @@
                             android:text="Bisa" />
                     </LinearLayout>
 
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
+                    <TextView
+                        android:id="@+id/txt_status_ketersediaan_p"
+                        style="@style/TextAppearance.AppCompat.Caption"
+                        android:textStyle="bold"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:orientation="horizontal">
-                        <TextView
-                            android:id="@+id/txt_status_ketersediaan_p"
-                            style="@style/TextAppearance.AppCompat.Caption"
-                            android:textStyle="bold"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="Status Ketersediaan: " />
+                        android:text="Status Ketersediaan: " />
+                    <com.google.android.material.card.MaterialCardView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/cv_status_ketersediaan">
                         <TextView
                             android:id="@+id/tv_status_ketersediaan_p"
                             style="@style/TextAppearance.AppCompat.Caption"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:layout_marginLeft="10dp"
+                            android:layout_marginRight="10dp"
+                            android:layout_marginTop="5dp"
+                            android:layout_marginBottom="5dp"
                             android:text="Tersedia" />
-                    </LinearLayout>
-                    <View
-                        android:layout_width="match_parent"
-                        android:layout_height="2dp"
-                        android:background="#c0c0c0"/>
+                    </com.google.android.material.card.MaterialCardView>
+
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -261,11 +263,25 @@
                             android:layout_height="wrap_content"
                             android:textStyle="bold"
                             android:text="Rerata Rating Driver" />
-                        <RatingBar
-                            android:id="@+id/rt_rerata_rating_driver"
-                            android:layout_width="wrap_content"
+                        <LinearLayout
+                            android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:isIndicator="true"/>
+                            android:orientation="horizontal">
+                            <RatingBar
+                                android:id="@+id/rt_rerata_rating_driver"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:isIndicator="true"/>
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                style="@style/TextAppearance.AppCompat.SearchResult.Title"
+                                android:text="4.0"
+                                android:layout_marginTop="12dp"
+                                android:layout_marginLeft="8dp"
+                                android:id="@+id/tv_rerata_rating_driver"/>
+                        </LinearLayout>
+
                     </LinearLayout>
                     <LinearLayout
                         android:layout_width="match_parent"
