--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -40,7 +40,7 @@
                         android:layout_marginTop="10dp"
                         android:translationX="140dp"
                         android:text="logout"
-                        android:id="@+id/btnLogoutDriver"
+                        android:id="@+id/btnLogoutManager"
                         android:backgroundTint="@color/black"/>
                 </LinearLayout>
 
